core/stdlib/tests/ui/invalid_union.stderr
error: Store derive is not supported for unions
 --> tests/ui/invalid_union.rs:4:7
  |
4 | union Invalid {
  |       ^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/ui/invalid_union.rs:6:2
  |
6 | }
  |  ^ consider adding a `main` function to `$DIR/tests/ui/invalid_union.rs`
